<resources>
    <string name="app_name">utils</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_audio">Audio</string>
    <string name="menu_video">Video</string>
    <string name="menu_camara">Camara</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="menu_lectura">Lectura</string>
    <string name="btn_tts1">Leer</string>
    <string name="menu_dictado">Dictado</string>

    <string name="txtLatitud">Latitud</string>
    <string name="txtLongitud">Longitud</string>
    <string name="txtAltitud">Altitud</string>
    <string name="txtDireccion">Dirección</string>

    <string name="menu_gps">GPS</string>
    <string name="menu_gestos">Gestos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>