<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_camara" />
        <item
            android:id="@+id/nav_lectura"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lectura" />
        <item
            android:id="@+id/nav_dictado"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dictado" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gps" />
        <item
            android:id="@+id/nav_gestos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gestos" />
    </group>
</menu>