<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ui.GPSFragment" >
    <View
        android:layout_width="match_parent"
        android:layout_height="36dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLatitud" >
    </TextView>
    <EditText
        android:id="@+id/edtLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:width="1dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLongitud" >
    </TextView>
    <EditText
        android:id="@+id/edtlongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:width="1dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAltitud" >
    </TextView>
    <EditText
        android:id="@+id/edtAltitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:width="1dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDireccion" >
    </TextView>
    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:width="1dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Leer" />
</LinearLayout>